# RetroEditor

./: .gitignore  Directory.Build.props  Directory.Build.targets  LICENSE  README.md  RetroEditor.csproj  RetroEditor.sln  RetroEditorApplication.csproj  index.html  index.json  manifest.json  toc.html  toc.json  xrefmap.yml
BuildTasks/: TransformProject.csproj  TransformProjects.cs
MyMGui/: MyMGui.cs  MyMGui.csproj  MyMGui_Clipper.cs  MyMGui_DrawData.cs  MyMGui_Enums.cs  MyMGui_IO.cs  MyMGui_PlatformIO.cs  MyMGui_Style.cs
Native/InstanceTrampoline/: CMakeLists.txt  JITBuffer.cpp  JITBuffer.h  NativeInterface.cpp  NativeInterface.h  NativeTrampoline.cpp  NativeTrampoline.h  NativeTrampolineMacOSArm64.h  NativeTrampolineSystemVAarch64.h  NativeTrampolineSystemVX64.h  NativeTrampolineWindowsX64.h  platform.h
Plugins/: Plugins.csproj
RetroEditor/: RetroEditor.csproj
RetroEditorApplication/: RetroEditorApplication.csproj
Source/: Editor.cs  Program.cs
SystemPlugins/: SystemPlugins.csproj
api/: RetroEditor.Plugins.ChangedEventHandler.html  RetroEditor.Plugins.Color4B.html  RetroEditor.Plugins.FlipState.html  RetroEditor.Plugins.IBitmapImage.html  RetroEditor.Plugins.IBitmapPalette.html  RetroEditor.Plugins.IEditor.html  RetroEditor.Plugins.IImage.html  RetroEditor.Plugins.ILayer.html  RetroEditor.Plugins.ILayerWithFlip.html  RetroEditor.Plugins.IMemoryAccess.html  RetroEditor.Plugins.IMenu.html  RetroEditor.Plugins.IMenuItem.html  RetroEditor.Plugins.IMenuProvider.html  RetroEditor.Plugins.IObject.html  RetroEditor.Plugins.IObjectMap.html  (+45 more)
docfx/: .gitignore  (+3 more)
(+220 files in other folders)
